@@ -19,6 +19,7 @@ The following bugs are fixed in 3.1.16:
 * 3463: Infinite recursion if $PieceName$ specified as Text Label
 * 3465: Empty DynamicProperty causes IllegalStateException on loading
 * 3277: NPE because MTRandom.setSeed() not called by Random() in Java 7
+* 3115: NPE in PlayerHand.mapSize()
 * 2907: Don't dump stack traces for missing images
 * 2633: BrowserLaunchingInitializingException in BrowserSupport()
 
