@@ -11,6 +11,7 @@ Bugs fixed:
 * 3463: Infinite recursion if $PieceName$ specified as Text Label
 * 3465: Empty DynamicProperty causes IllegalStateException on loading
 * 3277: NPE because MTRandom.setSeed() not called by Random() in Java 7
+* 3115: NPE in PlayerHand.mapSize()
 * 2907: Don't dump stack traces for missing images
 * 2633: BrowserLaunchingInitializingException in BrowserSupport()
 
